Fix: fix navigation overlap on mobile devices

--- a/src/ui/Navigation/navigation.module.scss
+++ b/src/ui/Navigation/navigation.module.scss
@@ -5,6 +5,7 @@
     &.mobile-opened {
       position: fixed;
       inset: 0;
+      z-index: 1000;
       padding: 0 10px 20px;
 
       nav {
